Fix Function Error

--- a/app/src/main/res/layout/activity_add_car_detail.xml
+++ b/app/src/main/res/layout/activity_add_car_detail.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Modules.AddCarDetailActivity"
-    android:id="@+id/activity_edit_profile">
+    tools:context=".Modules.AddCarDetailActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/edit_profile_app_bar_layout"
@@ -52,9 +51,11 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <ScrollView
-        android:scrollbars="none"
+
+
+    <LinearLayout
         android:layout_below="@+id/edit_profile_app_bar_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
@@ -79,14 +80,6 @@
                     app:civ_border_color="@color/colorPrimaryDark"
                     app:civ_border_width="2dp" />
 
-<!--                <ImageView-->
-<!--                    android:layout_gravity="center"-->
-<!--                    android:id="@+id/add_detail_image_car_choose"-->
-<!--                    android:layout_width="71dp"-->
-<!--                    android:layout_height="71dp"-->
-<!--                    android:layout_marginStart="16dp"-->
-<!--                    android:src="@drawable/logoround"/>-->
-
                 <LinearLayout
                     android:layout_gravity="center"
                     android:layout_width="match_parent"
@@ -99,6 +92,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/ic_photo_camera_primary_24dp" />
+
+
 
                 </LinearLayout>
 
@@ -265,7 +260,7 @@
 
         </LinearLayout>
 
-    </ScrollView>
+    </LinearLayout>
 
 
 
