--- a/app/src/main/res/layout/item_car.xml
+++ b/app/src/main/res/layout/item_car.xml
@@ -122,6 +122,12 @@
                                 android:orientation="horizontal">
 
                                 <TextView
+                                    android:text="RM"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="@font/mr" />
+
+                                <TextView
                                     android:id="@+id/item_car_price"
                                     android:text="Price"
                                     android:layout_width="wrap_content"
