--- a/app/src/main/res/layout/activity_add_car_detail.xml
+++ b/app/src/main/res/layout/activity_add_car_detail.xml
@@ -34,7 +34,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Add Car Details"
+                android:text="Add Car Record"
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 android:theme="@style/ToolbarTheme" />
