--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     //Main
-    <color name="colorPrimary">#494ca2</color>
-    <color name="colorPrimaryDark">#494ca2</color>
-    <color name="colorAccent">#494ca2</color>
+    <color name="colorPrimary">#698474</color>
+    <color name="colorPrimaryDark">#698474</color>
+    <color name="colorAccent">#698474</color>
 
     <color name="colorThird">#c6cbef</color>
     <color name="colorForth">#e3e7f1</color>
@@ -19,13 +19,6 @@
     <color name="textColorPrimaryDark">#2c2c2c</color>
     <color name="textColorPrimary">#4b4b4c</color>
     <color name="textColorAccent">#808080</color>
-
-    //Order Status
-    <color name="delivered">#0b8457</color>
-    <color name="shipped">#ec9b3b</color>
-    <color name="cancelled">#db3951</color>
-
-    <color name="yellow">#eac100</color>
 
     //Others
     <color name="white">#ffffff</color>
